--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
     <title>Deep Researcher Advance</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self';
     style-src 'self' 'unsafe-inline';
-    script-src 'self';">
+    script-src 'self';
+    connect-src *;
+    img-src * data:;">
 </head>
 
 <body>
